# NIZK-transaction-blockchain

./: README.md
reference/: privacy for account model.md  zk-SNARK.md
src/: CMakeLists.txt  DSC.cpp  DSC.h  account.cpp  account.h  benchmark.md  biligroup.cpp  biligroup.h  main.cpp  transaction  verifier.cpp  verifier.h
